--- a/slides.css
+++ b/slides.css
@@ -9,18 +9,18 @@ body {
 h2 {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: bold;
-  color: #0165BF;
+  color: #316B82;
   font-size: 12px;
   margin: 0.25em 0 0.5em 0;
 }
 h1, h3 {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: bold;
-  color: #0165BF;
+  color: #316B82;
 }
 a, a > code {
   font-family: 'Source Sans Pro', sans-serif;
-  color: #0165BF;
+  color: #316B82;
   text-decoration: none;
 }
 
@@ -36,7 +36,7 @@ a, a > code {
 .remark-code-line-highlighted     { background-color: #ffff88; }
 
 .inverse {
-  background-color: #0165BF;
+  background-color: #316B82;
   color: #ffffff;
   /* text-shadow: 0 0 20px #333; */
 }
