--- a/slides.css
+++ b/slides.css
@@ -9,18 +9,18 @@ body {
 h2 {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: bold;
-  color: #316B82;
+  color: #3E7BB4;
   font-size: 12px;
   margin: 0.25em 0 0.5em 0;
 }
 h1, h3 {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: bold;
-  color: #316B82;
+  color: #3E7BB4;
 }
 a, a > code {
   font-family: 'Source Sans Pro', sans-serif;
-  color: #316B82;
+  color: #3E7BB4;
   text-decoration: none;
 }
 
@@ -36,7 +36,7 @@ a, a > code {
 .remark-code-line-highlighted     { background-color: #ffff88; }
 
 .inverse {
-  background-color: #316B82;
+  background-color: #3E7BB4;
   color: #ffffff;
   /* text-shadow: 0 0 20px #333; */
 }
@@ -73,7 +73,7 @@ a, a > code {
   clear: both;
 }
 .question {
-  background-color: #d1e9ff;
+  background-color: #d0dce8;
   padding: 0.25px;
 }
 .instructions {
